src/styles/globals.scss
html, body {
  margin: 0;
}

body::after {
  content: '';
  position: absolute;
  inset: 0;
  background-color: #f3fcfa;
  opacity: 0.1;
  background-image:  linear-gradient(30deg, #1abc9c 12%, transparent 12.5%, transparent 87%, #1abc9c 87.5%, #1abc9c), linear-gradient(150deg, #1abc9c 12%, transparent 12.5%, transparent 87%, #1abc9c 87.5%, #1abc9c), linear-gradient(30deg, #1abc9c 12%, transparent 12.5%, transparent 87%, #1abc9c 87.5%, #1abc9c), linear-gradient(150deg, #1abc9c 12%, transparent 12.5%, transparent 87%, #1abc9c 87.5%, #1abc9c), linear-gradient(60deg, #1abc9ccc 25%, transparent 25.5%, transparent 75%, #1abc9ccc 75%, #1abc9ccc), linear-gradient(60deg, #1abc9ccc 25%, transparent 25.5%, transparent 75%, #1abc9ccc 75%, #1abc9ccc);
  background-size: 40px 70px;
  background-position: 0 0, 0 0, 20px 35px, 20px 35px, 0 0, 20px 35px;
  pointer-events: none;
  z-index: -1;
}

header {
  height: 56px;
  text-align: center;
  border-bottom: 1px solid #23a000;
  background-color: #fff;
  a {
    margin-left: 1em;
    color: #42ae41;
    font-size: 0.8em;
    line-height: 1;
    text-decoration: none;
  }
}

h1, h2, h3, h4, h5, h6 {
  margin: 0;
}

.c-block {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  height: calc(100dvh - 160px);
}

.c-btn {
  padding: 20px;
  color: #fff;
  font-weight: 700;
  background-color: #3fa330;
  border: 2px solid #1c8c0c;
  border-radius: 8px;
  text-decoration: none;
}

.c-questionTitle {
  width: 100%;
  margin: 40px 0 -40px;
  text-align: center;
}

.c-questionList {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-self: flex-start;
  gap: 10px;
}

.c-questioItem {
  display: block;
  flex: none;
  min-width: 3em;
  padding: 10px 6px;
  color: #061d02;
  font-weight: 700;
  background-color: #ffffff;
  border-color: #77b36e;
  border-style: solid;
  border-radius: 8px;
}

.c-answerTitle {
  width: 100%;
  text-align: center;
}

.c-answerList {
  width: 100%;
  max-width: 320px;
  margin: auto;
  padding: 0 9%;
}

.c-answerItem {
  font-weight: 700;
}

